# rustcap

./: Cargo.toml  README.md
src/: lib.rs  main.rs  screenshot.rs
static/gui/: #main.glade#  main.glade
