[package]
name = "rustcap"
version = "0.2.0"
edition = "2021"
authors = ["Noah Ehrman <noah.a.ehrman@gmail.com>"]

[[bin]]
name = "rcap"
path = "src/bin/cli.rs"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive", "string"] }
dirs = "4.0.0"
image = "0.24.5"
xcb = "1.2.0"